--- a/FRONTEND/app/package.json
+++ b/FRONTEND/app/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "daisyui": "^4.6.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2"
   },
