--- a/FRONTEND/app/package.json
+++ b/FRONTEND/app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "daisyui": "^4.6.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
