--- a/FRONTEND/app/package.json
+++ b/FRONTEND/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "daisyui": "^4.6.0",
+    "firebase": "^10.8.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.6",
